[workspace]
resolver = "2"

[workspace.package]
authors = ["Kyle Guarco <kyleguarco55@gmail.com>"]
version = "5.4.4"
edition = "2021"
license-file = "LICENSE.txt"
rust-version = "1.72.0"

[package]
name = "luna"
description = "The Lua programming language, in Rust."
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true

[dependencies]
luna-parser = { path = "luna-parser" }
luna-type = { path = "luna-type" }
