[package]
name = "luna-type"
description = "Primitive Lua type definitions"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
