[package]
name = "luna"
description = "The lua programming language, in rust."
authors = ["Kyle Guarco <kyleguarco55@gmail.com>"]
version = "5.4.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luna_parser = { path = "../luna_parser" }
